# device-info

./: .editorconfig  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/core/: builder.rs  crypto.rs  encryption.rs  internal.rs  mod.rs  string_tools.rs
src/plugins/macos/: plugin.rs
src/plugins/windows/: mod.rs  plugin.rs  wmi.rs
