[package]
name = "machine-code"
version = "0.1.0"
edition = "2021"
authors = ["me <me@me.com>"]
include = ["/src"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
whoami = "1.4.0"
