[package]
name = "device-info"
version = "0.1.0"
edition = "2021"
authors = ["Johnny Xu <johnny.xcy1997@outlook.com>"]
include = ["/src"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.21.5"
clap = "4.2.7"
hex = "0.4.3"
hmac = "0.12.1"
itertools = "0.10.5"
md-5 = "0.10.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.10.1"
sha2 = "0.10.6"
whoami = "1.4.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.11.0"
wmi = "0.12.0"
